# image_processing

./: .gitignore  README.md  pyproject.toml  test.py
assets/: car.jfif  car_card.jfif  lena.jfif
lesson10/: detect.py  templete_matching.py
lesson11/h1/: helper.py  test_pyramid.py
lesson11/h2/: conf.py  explore_dims.py  setting.json
lesson12/h1/: extract_feature.py  helpers.py  hog_c.py  setting.json
lesson12/h2/: dataset.py  hog_c.py  scan.py  setting.json
lesson13/h1/: helpers.py  main.py  nms.py  object_detector.py  setting.json  svm.py
lesson2/: divide.py  draw.py  load_and_display.py
lesson3/: flip.py  resize.py  rotation.py  translation.py
lesson4/: crop.py  img_arithmetic.py  img_bitwise.py  mask.py  split_and_merge.py
lesson5/: Morphological_operations1.py  Morphological_operations2.py  smooth_and_blurring1.py  smooth_and_blurring2.py
lesson6/: Lighting_and_color_spaces.py  gradiant.py  thresholding.py  thresholding2.py
lesson7/: canney_edge_detector.py  contours.py  contours2.py
lesson8/: contours3.py  contours4.py  contours5.py  contours6.py  contours7.py
lesson9/: Connected-component.py  colorhistgrom.py  colorhistgrom2.py  histrom.py
