[tool.poetry]
name = "image-processing"
version = "0.1.0"
description = ""
authors = ["erer"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.1"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
scikit-image = "^0.24.0"
mahotas = "^1.4.18"
imutils = "^0.5.4"
pillow = "^10.4.0"
json-minify = "^0.3.0"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
